# manualbind

./: .gitignore  Binding.h  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  MyActor.h  MyActorBinding.h  MyVector3d.h  MyVector3dBinding.h  README  README.md  TODO.md  TODO.txt  compile_commands.json  diagram.txt  main  main.cpp
docs/: LICENSE.md  Lua5.4.md  README.md  TEST.md  TODO.md  diagram.txt  quick tutorial.md
examples/: CMakeLists.txt  Makefile  config.mk
examples/common/: .gitignore  Makefile  common.cpp  common.h
examples/demo/: Makefile  MyActor.h  MyActorBinding.h  MyVector3d.h  MyVector3dBinding.h  demo.cpp
examples/downcast/: .gitignore  Makefile  downcast.cpp
examples/guiexample/: Makefile  guiexample.cpp
examples/luaref/: .gitignore  Makefile  luaref  luaref.cpp
examples/newref/: .gitignore  Makefile  newref.cpp
examples/tables/: Makefile  MyActor.h  MyActorBinding.h  tables.cpp
examples/upcast/: .gitignore  Makefile  upcast.cpp
guiexample/: .gitignore  Makefile  guiexample  guiexample.cpp  test.lua
src/: Binding.h  LuaBinding.cpp  LuaBinding.h  LuaException.h  LuaRef.h  LuaRefOld.h  LuaStack.h  NewRef.h  n4502.h
test/: Makefile  MyActor.h  MyActorBinding.h  MyVector3dBinding.h  runtest.cpp
tests/: .gitignore  CMakeLists.txt  Makefile  README  main.cpp  test1.cpp  test2.cpp  test_basic_pod.cpp  test_calling.cpp  test_extras.cpp  test_luaref.cpp  test_properties.cpp  test_shared_pointer.cpp
